--- a/tex/IndexNotations.tex
+++ b/tex/IndexNotations.tex
@@ -64,7 +64,8 @@
         $\tau_0$ & Période du signal $\tau_0 = 1/f_0$ \\
         $\xi_0$ & Déplacement particulaire dans le régénérateur \\
         $\xi_1$ & Déplacement du piston de la source acoustique principale \\
-        $\xi_2$ & Déplacement du piston de la source acoustique secondaire \\\hline
+        $\xi_2$ & Déplacement du piston de la source acoustique secondaire \\
+        $\lambda$ & Longueur d'onde du signal acoustique \\\hline
     \end{longtable}
 
 \bigskip
