--- a/tex/Introduction.tex
+++ b/tex/Introduction.tex
@@ -142,7 +142,7 @@ Les cycles thermodynamiques évoqués plus tôt sont différents en fonction de 
 %        \externalremake
 		\input{../fig/fig_Cycle_Stirling/tex/DepAllerIsoV}
 		\caption{déplacement isochore (aller)}
-		\label{fig:CycleStirling_DépIsoch1}
+		\label{fig:CycleStirling_DepIsoch1}
 	\end{subfigure}
 	%
 	\begin{subfigure}{.47\textwidth}
@@ -151,7 +151,7 @@ Les cycles thermodynamiques évoqués plus tôt sont différents en fonction de 
 %        \externalremake
 		\input{../fig/fig_Cycle_Stirling/tex/DetIsoT}
 		\caption{détente isotherme}
-		\label{fig:CycleStirling_Détente}
+		\label{fig:CycleStirling_Detente}
 	\end{subfigure}
 	%
 	\begin{subfigure}{.47\textwidth}
@@ -160,7 +160,7 @@ Les cycles thermodynamiques évoqués plus tôt sont différents en fonction de 
 %        \externalremake
 		\input{../fig/fig_Cycle_Stirling/tex/DepRetourIsoV}
 		\caption{déplacement isochore (retour)}
-		\label{fig:CycleStirling_DépIsoch2}
+		\label{fig:CycleStirling_DepIsoch2}
 	\end{subfigure}	
 	\caption[Cycle de Stirling des machines à ondes progressives]{Cycle thermodynamique de Stirling en fonctionnement réfrigérateur/pompe à chaleur à ondes progressives. Les traits pleins dénotent l'état initial de l'étape, les traits pointillés, l'état final.}
 	\label{fig:CycleStirling}
