--- a/fig/fig_OrientationCore/tex/subfig_OrientationCoreH1.tex
+++ b/fig/fig_OrientationCore/tex/subfig_OrientationCoreH1.tex
@@ -1,4 +1,4 @@
-\begin{tikzpicture}[scale=2/3]
+\begin{tikzpicture}[scale=1/2]
 
 %    \def\lenreg{2};
 %    \def\diam{3};
@@ -18,11 +18,11 @@
 	\def\HX{.25};
 	\def\decalage{\R/2-\L/2};
 	
-		\draw(6.5,\R/2) node{\includegraphics[width=.8\textwidth]{../fig/fig_OrientationCore/tex/TACOT.png}};
+		\draw(3.25,\R/2) node{\includegraphics[width=.9\textwidth]{../fig/fig_OrientationCore/tex/TACOT.png}};
 			
-		\fill[right color=blue!25,left color=red!25, draw=black] (\decalage,0) rectangle ++(\L,\R);
-		\draw[fill=red!25] (\decalage,0) rectangle ++(-\HX,\R);
-		\draw[fill=blue!25] (\decalage+\L,0) rectangle ++(\HX,\R);
+		\fill[right color=MatlabBlue,left color=MatlabOrange, draw=black] (\decalage,0) rectangle ++(\L,\R);
+		\draw[fill=MatlabOrange] (\decalage,0) rectangle ++(-\HX,\R);
+		\draw[fill=MatlabBlue] (\decalage+\L,0) rectangle ++(\HX,\R);
 
 		\foreach \z [evaluate=\z] in {0,...,4}{
 			\foreach \r [evaluate=\r as \num using int(\r+1 + 3*\z)] in {0,...,2}{
@@ -35,6 +35,6 @@
 %		$\rightarrow$ & acoustique\\
 %		& principale
 %		\end{tabular}};
-		\draw (n30.north west) node [above, fill=white, fill opacity=.7, text opacity=1]{Ambiant};
-		\draw (n10.north east) node [above, fill=white, fill opacity=.7, text opacity=1]{Froid};
+		\draw (n30.north west) node [above, fill=white, fill opacity=.7, text opacity=1]{\textcolor{MatlabOrange}{\textbf{Ambiant}}};
+		\draw (n10.north east) node [above, fill=white, fill opacity=.7, text opacity=1]{\textcolor{MatlabBlue}{\textbf{Froid}}};
 \end{tikzpicture}
