--- a/fig/fig_OrientationCore/tex/subfig_OrientationCoreV1.tex
+++ b/fig/fig_OrientationCore/tex/subfig_OrientationCoreV1.tex
@@ -33,22 +33,22 @@
 	\def\HX{.25};
 	\def\decalage{\R/2-\L/2};
 
-		\draw(\R/2,-3) node[rotate=-90]{\includegraphics[height=.8\textwidth]{../fig/fig_OrientationCore/tex/TACOT.png}};
+		\draw(\R/2,-2.9) node[rotate=-90]{\includegraphics[width=.8\textwidth]{../fig/fig_OrientationCore/tex/TACOT.png}};
 
-		\fill[top color=red!25, bottom color=blue!25, draw=black] (0,0) rectangle ++(\R,\L);
-		\draw[fill=blue!25] (0,0) rectangle ++(\R,-\HX);
-		\draw[fill=red!25] (0,\L) rectangle ++(\R,\HX);
+		\fill[top color=MatlabOrange, bottom color=MatlabBlue, draw=black] (0,0) rectangle ++(\R,\L);
+		\draw[fill=MatlabBlue] (0,0) rectangle ++(\R,-\HX);
+		\draw[fill=MatlabOrange] (0,\L) rectangle ++(\R,\HX);
 
 		\foreach \z [evaluate=\z] in {0,...,4}{
 			\foreach \r [evaluate=\r as \num using int(\r+1 + 3*\z)] in {0,...,2}{
 				\draw ({-(\R-.4)/2*\r+\R-.2},{\z*(1+\L)/4-.5}) node[minimum size=10pt,draw,circle,fill=white,opacity=.7,text opacity=1]{} node(n\z\r){\scriptsize \num};
 }}
 
-		\draw (n40.south east) node [right]{Ambiant};
-		\draw (n00.north east) node[right]{Froid};
-		\draw ($(n01.south)+(0,-.5cm)$) node[minimum size=10pt,draw,circle,fill=white,opacity=.7,text opacity=1]{} node (RIX){\scriptsize 0} node[anchor=north]{\begin{tabular}{c}
-		$\downarrow$\\
-		Source acoustique principale
-		\end{tabular}};
+		\draw (n40.south east) node [right, fill=white, fill opacity=.7, text opacity=1]{\textcolor{MatlabOrange}{\textbf{Ambiant}}};
+		\draw (n00.north east) node[right, fill=white, fill opacity=.7, text opacity=1]{\textcolor{MatlabBlue}{\textbf{Froid}}};
+		\draw ($(n01.south)+(0,-1.1)$) node[minimum size=10pt,draw,circle,fill=white,opacity=.7,text opacity=1]{} node (RIX){\scriptsize 0};% node[anchor=north]{\begin{tabular}{c}
+%		$\downarrow$\\
+%		Source acoustique principale
+%		\end{tabular}};
 		
 \end{tikzpicture}
