--- a/fig/fig_OrientationCore/tex/subfig_OrientationCoreV2.tex
+++ b/fig/fig_OrientationCore/tex/subfig_OrientationCoreV2.tex
@@ -28,26 +28,26 @@
 %    \def\CoreY{.9*\LY};
 %    
 
-	\def\L{1.5};
+	\def\L{2.1};
 	\def\R{5};
 	\def\HX{.25};
 	\def\decalage{\R/2-\L/2};
 
-		\fill[top color=blue!25, bottom color=red!25, draw=black] (0,0) rectangle ++(\R,\L);
-		\draw[fill=red!25] (0,0) rectangle ++(\R,-\HX);
-		\draw[fill=blue!25] (0,\L) rectangle ++(\R,\HX);
+		\fill[top color=MatlabBlue, bottom color=MatlabOrange, draw=black] (0,0) rectangle ++(\R,\L);
+		\draw[fill=MatlabOrange] (0,0) rectangle ++(\R,-\HX);
+		\draw[fill=MatlabBlue] (0,\L) rectangle ++(\R,\HX);
 
 		\foreach \z [evaluate=\z] in {0,...,4}{
 			\foreach \r [evaluate=\r as \num using int(\r+1 + 3*\z)] in {0,...,2}{
 				\draw ({(\R-.4)/2*\r+.2},{-\z*(1+\L)/4+\L+.5}) node[minimum size=10pt,draw,circle,fill=white,opacity=.7,text opacity=1]{} node(n\z\r){\scriptsize \num};
 }}
 
-		\draw ($(n01.north)+(0,.5cm)$) node[minimum size=10pt,draw,circle,fill=white,opacity=.7,text opacity=1]{} node(RIX){\scriptsize 0} node[anchor=south]{\begin{tabular}{c}
-		Source acoustique principale\\
-		$\uparrow$
-		\end{tabular}};
-		\draw (n42.north east) node [right]{Ambiant};
-		\draw (n02.south east) node [right]{Froid};
+		\draw ($(n01.north)+(0,1.1)$) node[minimum size=10pt,draw,circle,fill=white,opacity=.7,text opacity=1]{} node(RIX){\scriptsize 0};% node[anchor=south]{\begin{tabular}{c}
+%		Source acoustique principale\\
+%		$\uparrow$
+%		\end{tabular}};
+		\draw (n42.north east) node [right, fill=white, fill opacity=.7, text opacity=1]{\textcolor{MatlabOrange}{\textbf{Ambiant}}};
+		\draw (n02.south east) node [right, fill=white, fill opacity=.7, text opacity=1]{\textcolor{MatlabBlue}{\textbf{Froid}}};
 %		\draw (n41.south) node [below]{\textcolor{white}{\shortstack{Source acoustique principale\\ $\uparrow$}}};
 		
 \end{tikzpicture}
