Légende fig orientation core + annexe HP +Acc

--- a/tex/DispositifExpe.tex
+++ b/tex/DispositifExpe.tex
@@ -278,7 +278,7 @@ Les orientations choisies au moyen des palans sont décrites par deux angles $\p
 		\caption{}
 		\label{fig:OrientationCore_H2_Schema}
 	\end{subfigure} 
-	\caption{Orientations horizontales du réfrigérateur thermoacoustique avec les positions des thermocouples et leurs numéro. Pour chaque cas, la gravité est orientée vers le bas. Les orientations correspondent aux angles \subref{fig:OrientationCore_H1}~$\psi_v=\ang{0}$ et $\psi_h=\ang{0}$ pour l'orientation `\texttt{H1}' et \subref{fig:OrientationCore_H2}~$\psi_v=\ang{0}$ et $\psi_h=\ang{+90}$ pour l'orientation `\texttt{H2}'}
+	\caption{Orientations horizontales du réfrigérateur thermoacoustique avec les positions des thermocouples et leurs numéro. Pour chaque cas, la gravité est orientée vers le bas de la page. \subref{fig:OrientationCore_H1} et \subref{fig:OrientationCore_H1_Schema} orientation `\texttt{H1}' ; \subref{fig:OrientationCore_H2} et \subref{fig:OrientationCore_H2_Schema} orientation `\texttt{H2}'}
 	 \label{fig:OrientationCore_H}
 \end{figure}
 
@@ -317,7 +317,7 @@ Les orientations choisies au moyen des palans sont décrites par deux angles $\p
 		\caption{}
 		\label{fig:OrientationCore_V2_Schema}
 	\end{subfigure} 	
- 	\caption{Orientations verticales du réfrigérateur thermoacoustique avec les positions des thermocouples et leurs numéro. Pour chaque cas, la gravité est orientée vers le bas. Les orientations correspondent aux angles \subref{fig:OrientationCore_V1}~$\psi_v=\ang{-90}$ pour l'orientation `\texttt{V1}' et \subref{fig:OrientationCore_V2}~$\psi_v=\ang{+90}$ pour l'orientation `\texttt{V2}'.}%\textcolor{red}{CHX et AHX OK ou éch. froid et éch. chaud ? + $\psi_i$ dans la caption ou la figure ?}}
+ 	\caption{Orientations verticales du réfrigérateur thermoacoustique avec les positions des thermocouples et leurs numéro. Pour chaque cas, la gravité est orientée vers le bas de la page. \subref{fig:OrientationCore_V1} et \subref{fig:OrientationCore_V1_Schema} orientation `\texttt{V1}' ; \subref{fig:OrientationCore_V2} et \subref{fig:OrientationCore_V2_Schema} orientation  `\texttt{V2}'.}%\textcolor{red}{CHX et AHX OK ou éch. froid et éch. chaud ? + $\psi_i$ dans la caption ou la figure ?}}
     \label{fig:OrientationCore_V} %
 \end{figure}
 
