--- a/tex/_main_.tex
+++ b/tex/_main_.tex
@@ -377,6 +377,8 @@ Encadrants : & Hélène Bailliet, \textit{Université de Poitiers}\\
 
 \input{AHX}
 
+\input{InstrumHP}
+
 \input{ParamGaz}
 
 \input{RecapCondExpe}
