--- a/fig/fig_ConvNat_HeatOnly/tex/fig_HeatOnly_CHXout_V1V2.tex
+++ b/fig/fig_ConvNat_HeatOnly/tex/fig_HeatOnly_CHXout_V1V2.tex
@@ -10,10 +10,11 @@
     xlabel={Temps $t$ [\unit{\s}]},
     ylabel={\'Ecart de température $T-T_i$ [\unit{\degreeCelsius}]},
     xmin=0,xmax=3500,
-	ymin=-5,ymax=50,
-    xtick={0,600,...,3000,3500},%ytick={0,9.1120/100000,1.4452/10000,2.5/10000,5/10000,1/1000},
+	ymin=-5,ymax=80,
+    xtick={0,600,...,3000,3500},
+    ytick={-5,0,10,...,80},
     domain=0:100,
-    legend style = {at={(.01,1.05)},anchor = north west,cells={align=right},rounded corners},legend columns=3,
+    legend style = {at={(.01,1.05)},anchor = north west,cells={align=right},rounded corners},legend columns=3, fill opacity=1, text opacity=1
     ]
     	
     	
