--- a/fig/fig_ConvNat_HeatOnly/tex/fig_HeatOnly_Regmid_V1V2.tex
+++ b/fig/fig_ConvNat_HeatOnly/tex/fig_HeatOnly_Regmid_V1V2.tex
@@ -11,7 +11,8 @@
     ylabel={\'Ecart de température $\tau$ [\unit{\degreeCelsius}]},
     xmin=0,xmax=3500,
 	ymin=-5,ymax=50,
-    xtick={0,600,...,3000,3500},%ytick={0,9.1120/100000,1.4452/10000,2.5/10000,5/10000,1/1000},
+    xtick={0,600,...,3000,3500},    
+    ytick={-5,0,10,...,60},
     domain=0:100,
     legend style = {at={(1.02,.98)},anchor = north east, cells={align=right},rounded corners},legend columns=3,
     ]
