--- a/tex/EnsembleSimus.tex
+++ b/tex/EnsembleSimus.tex
@@ -17,7 +17,7 @@ Pour introduire des concepts utiles à la compréhension des phénomènes de con
 
 Dans la première sous-figure~\ref{fig:SimuConvNat2D}{\color{MatlabOrange}(a)}, les parois verticales droite et gauche sont respectivement maintenues à une température froide $T_f$ et chaude $T_c$, tandis que le sol, le plafond et le gaz au repos sont à la température $T_\infty$. En régime stationnaire, il s'établit une cellule de convection naturelle dans laquelle le gaz est mis en mouvement par les  variations de masse volumique proches des parois verticales. Cette configuration s'apparente aux orientations `\texttt{H1}' et `\texttt{H2}', respectivement présentées sur les figures~\ref{fig:OrientationCore_H1} et \subref{fig:OrientationCore_H2}.
 
-Dans la seconde sous-figure~\ref{fig:SimuConvNat2D}{\color{MatlabOrange}(b)}, ce sont cette fois les sol et plafond qui sont fixés aux températures chaude $T_c$ et froide $T_f$, et les murs et le gaz au repos pour lesquels la température est $T_\infty$. Dans cette configuration, favorable a priori à la mise en place d'une instabilité de \og Rayleigh-Bénard \fg{}, il peut s'établir des cellules de convection naturelle de forme plus ou moins complexe au delà du nombre de Rayleigh critique $\Rayleigh_c$ compris entre 650 et 1700 pour des parois à température fixe \cite{getling_rayleigh-benard_1998}. Le gaz s'élève depuis la paroi chaude jusqu'à la paroi froide, de laquelle il redescend ensuite pour revenir à son point de départ. Dans ce cas, la cellule de convection naturelle peut adopter une structure très complexe, plus que ce que peut suggérer la figure~\ref{fig:SimuConvNat2D}{\color{MatlabOrange}(b)} qui ne représente qu'une illustration grossière du mouvement du fluide. Les expériences correspondant à ce cas sont mises en place en suivant les orientations `\texttt{V1}' et `\texttt{V2}', présentés respectivement sur les figures~\ref{fig:OrientationCore_V1} et \subref{fig:OrientationCore_V2}
+Dans la seconde sous-figure~\ref{fig:SimuConvNat2D}{\color{MatlabOrange}(b)}, ce sont cette fois les sol et plafond qui sont fixés aux températures chaude $T_c$ et froide $T_f$, et les murs et le gaz au repos pour lesquels la température est $T_\infty$. Dans cette configuration, favorable a priori à la mise en place d'une instabilité de \og Rayleigh-Bénard \fg{}, il s'établit des cellules de convection naturelle de forme plus ou moins complexe au delà du nombre de Rayleigh critique $\Rayleigh_c$ compris entre 650 et 1700 pour des parois horizontales à température fixe \cite{getling_rayleigh-benard_1998}. En dessous de cette valeur critique, seule la conduction thermique dans le fluide est à considérer. Le gaz s'élève depuis la paroi chaude jusqu'à la paroi froide, de laquelle il redescend ensuite pour revenir à son point de départ. Dans ce cas, la cellule de convection naturelle peut adopter une structure très complexe, plus que ce que peut suggérer la figure~\ref{fig:SimuConvNat2D}{\color{MatlabOrange}(b)} qui ne représente qu'une illustration grossière du mouvement du fluide. Les expériences correspondant à ce cas sont mises en place en suivant les orientations `\texttt{V1}' et `\texttt{V2}', présentés respectivement sur les figures~\ref{fig:OrientationCore_V1} et \subref{fig:OrientationCore_V2}
 
 \begin{figure}[!ht]
     \centering
@@ -132,8 +132,10 @@ Le modèle Comsol simule 4 phénomènes. Premièrement, un flux de chaleur est r
 
 
 \subsection{Modèles physiques utilisés}
-\echaf{horizontal} La géométrie présentée dans la figure~\ref{fig:Comsol_ModeleSimplifie_Geometrie} est incluse dans la physique \texttt{Heat transfer in Solids and Fluids}. Les domaines correspondant au régénérateur et à son enceinte sont marqués comme solides, et le domaine représentant la cavité d'adaptation d'impédance comme fluide. Cette physique permet un couplage entre les trois domaines, en particulier entre les domaines fluides et solides. Cependant, la gravité et la convection naturelle ne sont pas pris en compte dans le modèle fluide, et il est nécessaire d'ajouter deux modèles à ce domaine concerné. Les physiques \texttt{laminar flow} et \texttt{Heat transfer in fluids}, couplé par la multiphysique \texttt{Nonisothermal flow} permettent cette modélisation plus avancée.
+\subsubsection{Orientations horizontales}
+La géométrie présentée dans la figure~\ref{fig:Comsol_ModeleSimplifie_Geometrie} est incluse dans la physique \texttt{Heat transfer in Solids and Fluids}. Les domaines correspondant au régénérateur et à son enceinte sont marqués comme solides, et le domaine représentant la cavité d'adaptation d'impédance comme fluide. Cette physique permet un couplage entre les trois domaines, en particulier entre les domaines fluides et solides. Cependant, la gravité et la convection naturelle ne sont pas pris en compte dans le modèle fluide, et il est nécessaire d'ajouter deux modèles à ce domaine concerné. Les physiques \texttt{laminar flow} et \texttt{Heat transfer in fluids}, couplé par la multiphysique \texttt{Nonisothermal flow} permettent cette modélisation plus avancée.
 
+\subsubsection{Orientations verticales}
 \echaf{vertical Rayleigh Bénard requiert de virer la multiphysique, et d'ajouter une source volumique -> utiliser nombre de rayleigh + cf ppt sur le site de comsol}
 
 \subsection{Conditions aux frontières}
