Ajout mindmap chap 2

--- a/tex/DispositifExpe.tex
+++ b/tex/DispositifExpe.tex
@@ -1,5 +1,14 @@
 \chapter{Dispositif expérimental}
 \mylocaltoc
+\newpage
+
+\vfill
+{
+\tikzsetfigurename{fig_TOC_DispositifExpe}
+\input{../fig/TOC/TOC_DispositifExpe}
+}
+\vfill
+\newpage
 
 
 \section{Introduction}\label{chap:IntroProtocExp}
