--- a/tex/_main_.tex
+++ b/tex/_main_.tex
@@ -222,6 +222,7 @@
 	\usetikzlibrary{automata,positioning}
 	\usetikzlibrary{math,fit}
 	\usetikzlibrary{fadings,shadings}
+	\usetikzlibrary{mindmap}
 	\tikzset{>=latex}
 	\tikzset{arw/.style={>={latex[length=3mm,width=5mm]},line width=2mm,draw=gray}}
 
