--- a/tex/EnsembleSimus.tex
+++ b/tex/EnsembleSimus.tex
@@ -24,7 +24,7 @@ Dans la seconde sous-figure~\ref{fig:SimuConvNat2D}{\color{MatlabOrange}(b)}, ce
     \external{fig_SimuConvNat2D}
 %    \externalremake
     \input{../fig/fig_SimuConvNat2D/tex/fig_SimuConvNat2D}
-    \caption{Cellule de convection naturelle dans une cavité rectangulaire 2D \textbf{(a)} pour un gradient de température normal à la direction de la gravité, et \textbf{(b)} pour un gradient de température colinéaire à la direction de la gravité. Quelque soit la configuration, la distance caractéristique est mesurée dans la direction verticale.}
+    \caption{Cellule de convection naturelle dans une cavité rectangulaire 2D \textbf{(a)} pour un gradient de température normal à la direction de la gravité, et \textbf{(b)} pour un gradient de température colinéaire à la direction de la gravité. Quelle que soit la configuration, la distance caractéristique est mesurée dans la direction verticale.}
     \label{fig:SimuConvNat2D}
 \end{figure}
 
@@ -35,13 +35,14 @@ Il est possible de modéliser l'écoulement dans ce volume en utilisant les équ
 \begin{subequations} % page wikipédia RayleighBénard
 	\begin{align}
 		\partial_t \rho_0 + (\mathbf v \cdot \nabla)\rho_0 + \rho_0 \nabla \cdot \mathbf{v} &= 0, \label{eq:NavierStokes_Boussinesq_Conti}\\
+		\intertext{pour la continuité,}
 		\rho_0 [\partial_t \mathbf v + (\mathbf v \cdot \nabla)\mathbf v] &= -\nabla p + \mu \nabla^2 \mathbf v + \rho_0\beta g(T_c-T_f) \mathbf e_{z,0}, \label{eq:NavierStokes_Boussinesq_QtMvt}\\
-		\intertext{et}
+		\intertext{pour la conservation de la quantité de mouvement, et}
 		\partial_t T + (\mathbf v \cdot \nabla) T - \kappa\nabla^2T &= 0. \label{eq:NavierStokes_Boussinesq_NRJinterne}
 	\end{align}
 	\label{eq:NavierStokes_Boussinesq}%
 \end{subequations}
-L'adimensionalisation de l'équation \eqref{eq:NavierStokes_Boussinesq_QtMvt} qui concerne la conservation de la quantité de mouvement donne
+pour la conservation de l'énergie interne. L'adimensionnement de l'équation \eqref{eq:NavierStokes_Boussinesq_QtMvt} donne
 
 \begin{equation}
 	\frac{1}{\mathrm{Pr}}(\partial_t \mathbf{v} + (\mathbf{v} \cdot \nabla)\mathbf{v}) = -\nabla p + \mathrm{Ra} T \mathbf e_{z,0} + \nabla^2 \cdot \mathbf{v},
@@ -118,7 +119,9 @@ avec $h$ le coefficient d'échange convectif à déterminer.\bigskip
 Les calculs des nombres précédent peuvent guider l'intuition quant aux prédominances de chaque effet prennant place dans le noyau et aux environs de celui-ci : la vitesse d'entraînement du gaz par convection, la quantité de chaleur transportée par elle, son importance par rapport à la conduction par le matériau poreux et ses parois. Des paramètres utiles pour des modèles plus avancés et présenté notamment en section~\ref{chap:ModeleTemporel} doivent également être évalués par ces équations.
 
 \section{\'Elements finis}\label{chap:FEM}
-Le modèle 2D simplifié d'une cavité différentiellement chauffée ne prend pas en compte plusieurs paramètres. En effet, la cavité est en réalité un cône, un flux oscillant se superpose à l'écoulement causé par la convection naturelle, et les conditions aux frontières sont plus complexes que des températures fixées. Pour connaître l'allure des lignes de courant à l'intérieur en présence d'un flux de masse provoqué par la convection naturelle, un modèle de la cavité est réalisé dans le logiciel d'éléments finis Comsol Multiphysics grâce à une géométrie présenté sur la figure~\ref{fig:Comsol_ModeleSimplifie_Geometrie}. Avec ce logiciel, il est également possible de coupler une simulation acoustique en plus de la simulation de transferts thermiques, ce que le modèle 2D simplifié ne permet pas aisément. 
+Le modèle 2D simplifié d'une cavité différentiellement chauffée présentée sur la figure~\ref{fig:SimuConvNat2D} ne prend pas en compte plusieurs paramètres. En effet, la cavité est en réalité un cône, un flux oscillant se superpose à l'écoulement causé par la convection naturelle, et les conditions aux frontières sont plus complexes que des températures fixées. Pour connaître l'allure des lignes de courant à l'intérieur en présence d'un flux de masse provoqué par la convection naturelle, un modèle de la cavité est réalisé dans le logiciel d'éléments finis Comsol Multiphysics grâce à une géométrie présenté sur la figure~\ref{fig:Comsol_ModeleSimplifie_Geometrie}.
+
+
 
 \begin{figure}[!ht]
     \centering
@@ -128,8 +131,25 @@ Le modèle 2D simplifié d'une cavité différentiellement chauffée ne prend pa
     \label{fig:Comsol_ModeleSimplifie_Geometrie}
 \end{figure}
 
-Le modèle Comsol simule 4 phénomènes. Premièrement, un flux de chaleur est retiré à la paroi en $x=0$, afin de représenter le refroidissement homogène sur la paroi par effet thermoacoustique. Ensuite, la conduction dans le métal pour $x>0$ est modélisée en utilisant deux valeur de conductivité thermique, pour l'enceinte d'une part et pour le régénérateur d'autre part. Il est à noter que dans ce modèle qui reste assez grossier, le matériau qui compose le régénérateur est supposé non poreux, afin de répondre à une hypothèse portant sur la présence ou l'absence de convection naturelle à l'intérieur de celui-ci. Pour ce faire, deux valeurs de conductivité thermiques sont considérées pour l'ensemble empilement de tissus métalliques et enceinte. 
+Cependant, pour cette première itération du modèle par élément finis, la propagation acoustique ainsi que la porosité du régénérateur ne sont pas considérés, et le modèle Comsol prend 3 phénomènes en compte.\medskip
 
+Premièrement, un flux de chaleur est retiré à la paroi en $x=0$, afin de représenter le refroidissement homogène sur la paroi par effet thermoacoustique. Les hypothèses avancées par la théorie linéaire prédisent une température homogène sur la section, ici à une température froide $T_c$.\smallskip
+
+Ensuite, la conduction dans l'acier inoxydable composant l'empilement de tissus métalliques et l'enceinte qui les contient, pour $x>0$ est modélisée en utilisant deux valeur de conductivité thermique, pour chacun de ces domaines. La conductivité du domaine représentant le régénérateur est considérée dix fois plus faible que celle du même matériau plein \cite{swift_thermoacoustics_2017} \echaf{prendre 79\% sinon ?}. Cette conduction transverse d'une part et meilleure dans l'enceinte du régénérateur d'autre part, doit causer des écarts axisymétrique de température selon la direction transverse du noyau $\mathbf e_r$, entre son centre et sa périphérie.\smallskip
+
+Enfin, la convection est modélisée dans la cavité d'adaptation d'impédance. À titre d'exemple, dans le cas de l'orientation `\texttt{H1}', l'axisymétrie de la distribution de température doit empêchée par ce phénomène.\medskip
+
+Ces effets sont supposés se superposer selon le schéma~\ref{fig:SuperpositionComsol}, d'après les observations faites par Ramadan \textit{et al.} \cite{ramadan_design_2021}. Dans ce cas, le \textsc{Tacot} est positionné dans l'orientation `\texttt{H1}'. Les autres orientations doivent présenter d'autres résultats, car la convection naturelle ne se manifeste pas de la même manière dans le cas d'une configuration de Rayleigh-Bénard ou \echaf{une autre}
+
+
+\begin{figure}[!ht]
+    \centering
+    \external{fig_SuperpositionComsol}
+    %\externalremake
+    \input{../fig/fig_SuperpositionComsol/tex/fig_SuperpositionComsol}
+    \caption{Concept du modèle Comsol}
+    \label{fig:SuperpositionComsol}
+\end{figure}
 
 \subsection{Modèles physiques utilisés}
 \subsubsection{Orientations horizontales}
