--- a/tex/EnsembleSimus.tex
+++ b/tex/EnsembleSimus.tex
@@ -147,7 +147,7 @@ Ces effets sont supposés se superposer selon le schéma~\ref{fig:SuperpositionC
     \external{fig_SuperpositionComsol}
     %\externalremake
     \input{../fig/fig_SuperpositionComsol/tex/fig_SuperpositionComsol}
-    \caption{Concept du modèle Comsol}
+    \caption{Phénomènes thermiques pris en compte dans le modèle Comsol équivalent. (a) tendance du gradient transverse de température tel qu'observé dans \cite{ramadan_design_2021}, (b) température froide atteinte par effet thermoacoustique, (c) conduction thermique transverse dans le milieu poreux et par les parois de l'enceinte, (d) gradient de température transverse causé par la convection naturelle.}
     \label{fig:SuperpositionComsol}
 \end{figure}
 
