Notation en 3 colonnes

--- a/tex/IndexNotations.tex
+++ b/tex/IndexNotations.tex
@@ -1,47 +1,48 @@
 \chapter{Index des notations}\label{chap:IndexNotations}%\addcontentsline{toc}{chapter}{\nameref{chap:IndexNotations}}
 
 \begin{center}
-    \begin{longtable}{p{.15\textwidth} p{.75\textwidth}}
+    \begin{longtable}{p{.1\textwidth} p{.1\textwidth} p{.65\textwidth}}
 %    	\hline
-        \multicolumn{2}{c}{Lettres latines}  \\\hline
-        \textbf{Symbole} & \textbf{Définition} \\\hline\hline \endfirsthead
-        \multicolumn{2}{c}{Lettres latines (suite)}  \\\hline
-        \textbf{Symbole} & \textbf{Définition} \\\hline\hline \endhead
+        \multicolumn{3}{c}{Lettres latines}  \\\hline
+        \textbf{Symbole} & \textbf{Unité} & \textbf{Définition} \\\hline\hline \endfirsthead
+        \multicolumn{3}{c}{Lettres latines (suite)}  \\\hline
+        \textbf{Symbole} & \textbf{Unité} & \textbf{Définition} \\\hline\hline \endhead
 		
 		\hline
-		\multicolumn{2}{r}{Continué sur la page suivante...} \endfoot
+		\multicolumn{3}{r}{Continué sur la page suivante...} \endfoot
         \hline \endlastfoot
-        $c_0$ & Célérité du son dans le milieu \\
-        $C_p$ & Capacité calorifique du gaz à pression constante \\
-        $C_s$ & Capacité calorifique du solide poreux \\
-        $C_v$ & Capacité calorifique du gaz à volume constant \\
-        $\COP$ & Coefficient de performance, $\COP=\frac{Q_f}{W_e}$ \\
-        $\COP_{\sf carnot}$ & Coefficient de performance de Carnot, $\COP_{\sf carnot} = \frac{T_f}{T_c-T_f}$ \\
-        $\mathbf{g}$ & Constante de gravité, $\mathbf{g}=\qty{9.81}{\meter\per\second\squared}$ \\
-        $g$ & Gain thermoacoustique \\
-        $\Grashof$ & Nombre de Grashof \\
-        $k_0$ & Nombre d'onde sans perte \\
-        $k$ & Conductivité thermique \\
-        $K_p$ & Perméabilité hydraulique d'un matériau poreux \\
-        $L_{\sf reg}$ & Longueur du régénérateur, $L_{\sf reg}=\qty{39}{\milli\meter}$ \\
-        $\Nusselt$ & Nombre de Nusselt \\
-        $p_0$ & Pression statique dans le réfrigérateur \\
-        $p$ & Pression acoustique \\
-        $\Peclet$ & Nombre de Péclet \\
-        $\Prandtl$ & Nombre de Prandtl \\
-        $\mathbf{e}_r$ & Vecteur unitaire transverse du noyau \\
-        $R_{\sf reg}$ & Rayon du régénérateur, $R_{\sf reg}=\qty{74}{\milli\meter}$ \\
-        $\Rayleigh$ & Nombre de Rayleigh \\
-        $r_h$ & Rayon hydraulique des pores du régénérateur \\
-        $T_0$ & Température moyenne locale du gaz dans le noyau \\
-        $T_\infty$ & Température ambiante hors de la machine \\
-        $u$ & Débit acoustique \\
-        $v$ & Vitesse acoustique \\
-        $W_e$ & Puissance électrique consommée par les sources acoustiques \\
-        $\mathbf{e}_x$ & Vecteur unitaire axial du noyau \\
-        $\mathbf e_{x0}$ & \echaf{définir} \\
-        $Q_c$ & Flux de chaleur extrait par l'eau circulant dans l'échangeur ambiant \\
-        $Q_f$ & Flux de chaleur apporté par les résistances chauffantes dans l'échangeur froid\\
+        $c_0$ & \unit{\meter\per\second} & Célérité du son dans le milieu \\
+        $C_p$ &  & Capacité calorifique du gaz à pression constante \\
+        $C_s$ &  & Capacité calorifique du solide poreux \\
+        $C_v$ &  & Capacité calorifique du gaz à volume constant \\
+        $\COP$ &  & Coefficient de performance, $\COP=\frac{Q_f}{W_e}$ \\
+        $\COP_{\sf carnot}$ &  & Coefficient de performance de Carnot, $\COP_{\sf carnot} = \frac{T_f}{T_c-T_f}$ \\
+        $DR$ &  & \textit{Drive ratio}, $DR=\frac{p}{p_0}$\\
+        $\mathbf{g}$ &  & Accélération terrestre, $\mathbf{g}=\qty{9.81}{\meter\per\second\squared}$ \\
+        $g$ &  & Gain thermoacoustique \\
+        $\Grashof$ &  & Nombre de Grashof \\
+        $k_0$ &  & Nombre d'onde sans perte \\
+        $k$ &  & Conductivité thermique \\
+        $K_p$ &  & Perméabilité hydraulique d'un matériau poreux \\
+        $L_{\sf reg}$ &  & Longueur du régénérateur, $L_{\sf reg}=\qty{39}{\milli\meter}$ \\
+        $\Nusselt$ &  & Nombre de Nusselt \\
+        $p_0$ &  & Pression statique dans le réfrigérateur \\
+        $p_1$ &  & Pression acoustique \\
+        $\Peclet$ &  & Nombre de Péclet \\
+        $\Prandtl$ &  & Nombre de Prandtl \\
+        $\mathbf{e}_r$ &  & Vecteur unitaire transverse du noyau \\
+        $R_{\sf reg}$ &  & Rayon du régénérateur, $R_{\sf reg}=\qty{74}{\milli\meter}$ \\
+        $\Rayleigh$ &  & Nombre de Rayleigh \\
+        $r_h$ &  & Rayon hydraulique des pores du régénérateur \\
+        $T_0$ &  & Température moyenne locale du gaz dans le noyau \\
+        $T_\infty$ &  & Température ambiante hors de la machine \\
+        $u$ &  & Débit acoustique \\
+        $v$ &  & Vitesse acoustique \\
+        $W_e$ &  & Puissance électrique consommée par les sources acoustiques \\
+        $\mathbf{e}_x$ &  & Vecteur unitaire axial du noyau \\
+        $\mathbf e_{x0}$ &  & \echaf{définir} \\
+        $Q_c$ &  & Flux de chaleur extrait par l'eau circulant dans l'échangeur ambiant \\
+        $Q_f$ &  & Flux de chaleur apporté par les résistances chauffantes dans l'échangeur froid\\
     \end{longtable}
 
 \bigskip
