--- a/tex/DispositifExpe.tex
+++ b/tex/DispositifExpe.tex
@@ -1,15 +1,26 @@
 \chapter{Dispositif expérimental}
-\mylocaltoc
-\newpage
+%\mylocaltoc
 
 \vfill
-{
-\tikzsetfigurename{fig_TOC_DispositifExpe}
-\input{../fig/TOC/TOC_DispositifExpe}
-}
+\begin{figure}[!ht]
+    \centering
+    \external{fig_TOC_DispositifExpe}
+%    \externalremake
+    \input{../fig/TOC/TOC_DispositifExpe}
+%    \caption{•}
+%    \label{fig:•}
+\end{figure}
 \vfill
+
 \newpage
 
+%\vfill
+%{
+%\tikzsetfigurename{fig_TOC_DispositifExpe}
+%\input{../fig/TOC/TOC_DispositifExpe}
+%}
+%\vfill
+%\newpage
 
 \section{Introduction}\label{chap:IntroProtocExp}
 Après avoir brièvement rappelé les bases de fonctionnement des machines thermoacoustiques, il est temps de décrire le réfrigérateur support de cette thèse. Le choix de la géométrie, les paramètres hydrauliques du régénérateur utilisé, et enfin la chaîne d'excitation et d'acquisition sont présentés dans la section~\ref{chap:PresentationTacot} - \nameref{chap:PresentationTacot}. La deuxième partie présente les conditions expérimentales choisies ainsi que le protocole suivi pour chaque mesure dans la section~\ref{chap:ProtocolExpe} - \nameref{chap:ProtocolExpe}.
@@ -24,7 +35,7 @@ Après avoir brièvement rappelé les bases de fonctionnement des machines therm
 
 Les expériences réalisées avant le début de cette thèse sont faite en utilisant un gaz pressurisé à \qty{40}{\bar} et composé de \qty{65}{\percent} d'hélium et de \qty{35}{\percent} d'argon, car dans ces proportions le nombre de Prandtl est minimum \cite{belcher_working_1999}. Le modèle linéaire 1D réalisé avec le logiciel \echaf{dédié} \textsc{DeltaEC} prédit les meilleurs performances à la fréquence de résonance du système $f=\qty{47}{\hertz}$. C'est par ailleurs le seul point de fonctionnement où l'impédance électrique est supérieure à la limite basse admise par l'amplificateur, soit \qty{2}{\ohm}. Le déphasage inter-source est fixé à $\varphi_{2-1}=\ang{-60}$ pour toutes les expériences, car il s'agit de la valeur optimale d'après les simulations et ce qui est confirmé par des expériences préliminaires.
 
-Dans cet article, il est montré qu'à ces fréquence et déphasage inter-sources, et à une amplitude $DR=\frac{p_{\sf acoustique}}{p_{\sf statique}}=\qty{3.6}{\percent}$, une puissance d'alimentation des sources $\dot W_e=\qty{193}{\watt}$ et consommée, une quantité de chaleur de $\dot Q_f=\qty{290}{\watt}$ est extraite à la source froide et la température $T_a=\qty{15}{\degreeCelsius}$ est atteinte. Le coefficient de performance à ce point de fonctionnement est $\COP=\frac{\dot Q_f}{\dot W_e}=\num{1.5}$, soit \qty{15}{\percent} du coefficient de performance de Carnot.\smallskip
+Dans cet article, il est montré qu'à ces fréquence et déphasage inter-sources, et à une amplitude $DR=\frac{p_1}{p_0}=\qty{3.6}{\percent}$, une puissance d'alimentation des sources $\dot W_e=\qty{193}{\watt}$ et consommée, une quantité de chaleur de $\dot Q_f=\qty{290}{\watt}$ est extraite à la source froide et la température $T_a=\qty{15}{\degreeCelsius}$ est atteinte. Le coefficient de performance à ce point de fonctionnement est $\COP=\frac{\dot Q_f}{\dot W_e}=\num{1.5}$, soit \qty{15}{\percent} du coefficient de performance de Carnot.\smallskip
 
 Cependant, les résultats obtenus avant le démarrage de cette thèse montrent des écarts avec les prédictions de la théorie linéaire.\echaf{ajouter figures des écarts mesures-modèle DeltaEC}
 
